--- a/package.json
+++ b/package.json
@@ -53,6 +53,8 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.20.0",
+    "@types/react-beautiful-dnd": "^13.1.8",
+    "@types/uuid": "^10.0.0",
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.3",
